test/log/store/vsstcb3_v_u16.txt
vsstcb3_v_u16.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb3_v_u16.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb3_v_u16.c:37:79: error: expected declaration specifiers or '...' before ')' token
   37 | void vsstcb3_v_u16_golden(uint16_t *base,int16_t *index,uint16_t value[3][32],) {
      |                                                                               ^
vsstcb3_v_u16.c: In function 'main':
vsstcb3_v_u16.c:63:5: warning: implicit declaration of function 'vsstcb3_v_u16_golden'; did you mean 'vsstcb3_v_u16_m'? [-Wimplicit-function-declaration]
   63 |     vsstcb3_v_u16_golden(exp_base,exp_index,exp_value,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     vsstcb3_v_u16_m
vsstcb3_v_u16.c:63:55: error: 'exp_result' undeclared (first use in this function)
   63 |     vsstcb3_v_u16_golden(exp_base,exp_index,exp_value,exp_result);
      |                                                       ^~~~~~~~~~
vsstcb3_v_u16.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
vsstcb3_v_u16.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb3_v_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb3_v_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb3_v_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb3_v_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed